2003-12-17  Pierre Chifflier  <pollux@wzdftpd.net>

	* visual: some bugfixes on malloc/free, ensure we can use windows-like paths

2003-12-15  Pierre Chifflier  <pollux@wzdftpd.net>

	* siteconfig: get bandwidth

2003-12-12  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: change all malloc and free to internal function
          wzd_{malloc,free} to avoid memory problems on win32

2003-12-10  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: renamed chrgrp to changegrp, and implemented chgrp

2003-12-08  Pierre Chifflier  <pollux@wzdftpd.net>

	* wzd_dir.c: functions to manipulate file/dir names
	* wzd_socket.c: functions to find local/remote port
	* wzd_messages.c: write_message_footer function obsolete, replaced by cookies
	* feature: ident support
	* bugfix: SIZE command not sending \r\n
	* doc updated

2003-11-30  Pierre Chifflier  <pollux@wzdftpd.net>

	* native win32 version, using visual c++
	* added strptime, strtoull detection & default implementation if missing
	* cookies: spacefree, spacetotal, sectionname

2003-11-24  Pierre Chifflier  <pollux@wzdftpd.net>

	* added strtok_r detection & default implementation if missing
	* functions to open/close log file in lib
	* functions to open/close xferlog file in lib
	* bugfix: spaces were managed oddly in cookies

2003-11-18  Pierre Chifflier  <pollux@wzdftpd.net>

	* removed 'unsigned long long' type, replaced with 'u_int64_t'
	* added md5 code to main lib
	* implemented 'XMD5' command

2003-11-17  Pierre Chifflier  <pollux@wzdftpd.net>

	* started implementation of 'PRET' command (see lftp, GridFTPD, DrFTPD)
	* sfv module: diz/sfv files are processed to guess number of files to be uploaded
	* definitly removed internal sfv checker, but integrated crc32 code in
	  main lib (to be used by other functions)
	* implemented 'XCRC' command

2003-11-14  Pierre Chifflier  <pollux@wzdftpd.net>

	* cookies can be used inside messages and ftp replies
	* bugfix: more checks on size for messages > 1024 bytes